# ARTO-AL

./: README.md
src/apply_disturbance/: apply_force.py  apply_velocity_change.py
src/slider_controller/: CMakeLists.txt  package.xml
src/slider_controller/data/: slider2dof_new.urdf
src/slider_controller/src/: BO.py  LIPM.h  analytical_gradients.cpp  analytical_gradients.h  define.h  footstep_planner.py  footstep_planner_2d.py  footstep_planner_BFGS.cpp  gen_trajectory.cc  gen_trajectory.h  obstacle.py  osc_foot.cc  osc_foot.h  slider_controller.cc  slider_controller_foot.cc  z_test.py
src/slider_controller/src/utils/: polar_plot.py
src/slider_gazebo/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  stop_shortcut.sh
src/slider_gazebo/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  slider_gazebo-msg-extras.cmake.develspace.in
src/slider_gazebo/catkin_generated/installspace/: slider_gazebo-msg-extras.cmake  slider_gazebo-msg-paths.cmake  slider_gazebo.pc  slider_gazeboConfig.cmake
src/slider_gazebo/catkin_generated/stamps/slider_gazebo/: package.xml.stamp
src/slider_gazebo/cmake/: slider_gazebo-genmsg-context.py  slider_gazebo-genmsg.cmake
src/slider_gazebo/config/: slider_control.yaml  slider_control_original.yaml
src/slider_gazebo/launch/: SLIDER_world.launch  empty_world.launch  initial_command.txt  slider_controller.launch  slider_joint_position_control.launch  slider_position_control.launch  slider_torque_control.launch
src/slider_gazebo/meshes/: EndCap.STL  HipRollBox.STL  LeftSlidingBoxDefeature.STL  Left_Body_Roll_Link.STL  Left_Leg.STL  Left_Roll_Pitch_Link.STL  Left_Slide_Foot_Pitch_Link.STL  RightSlidingBoxDefeature.STL  Right_Body_Roll_Link.STL  Right_Foot.STL  Right_Foot_Pitch_Foot_Roll_Link.STL  Right_Leg.STL  TorsoCasing.STL  TorsoCasingMetresFrontFine.STL  TorsoCasing_noDome.STL  leg.STL
src/slider_gazebo/meshes_foot/: Left_Foot.STL  Left_Foot_Pitch_Foot_Roll_Link.STL  Left_Pitch_Slide_Link.STL  Right_Pitch_Slide_Link.STL  Right_Roll_Pitch_Link.STL  Right_Slide_Foot_Pitch_Link.STL
src/slider_gazebo/models/SLIDER-LOGO/materials/scripts/: SLIDER-LOGO.material
src/slider_gazebo/msg/: traj_scale.msg
src/slider_gazebo/src/: publisher.py  slider_position_controller.py  slider_torque_controller.py
src/slider_gazebo/urdf/: SLIDER.xml  SLIDER_ROTOGAIT_FOOT_pin.urdf  initial_joint_V_shape  note_change_hipToHipDistance.txt  rotateSLIDER.urdf  slider (copy).urdf  slider.urdf  slider2dof.urdf  slider2dof_new.urdf  slider2dof_withAnkle (copy).urdf  slider2dof_withAnkle.urdf  slider_Roto.urdf  slider_V_shape.urdf  slider_no_rpy.urdf  slider_withMesh.urdf
src/slider_gazebo/worlds/: SLIDER.world  SLIDER_floorslipFixed.world  SLIDER_world1.sdf  bullet.sdf  simbody.sdf
